# mgsca

./: .gitignore  .gitmodules  CMakeLists.txt  certificate_data.cpp  certificate_data.h  certificate_edit_dialog.cpp  certificate_edit_dialog.h  certificate_edit_dialog.ui  certificate_item.cpp  certificate_item.h  distinguished_name.cpp  distinguished_name.h  document.cpp  document.h  idle_handler.cpp  idle_handler.h  idle_handler_p.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  utils.cpp  utils.h
temp_from_odt/: client.cpp  client.h  client_p.h  client_posix.cpp  client_win.cpp  firebase.cpp  firebase.h  firebase_posix.cpp  firebase_win.cpp  openssl_wrappers.cpp  openssl_wrappers.h
